--- a/debian-9.x_ubuntu-16.04/control
+++ b/debian-9.x_ubuntu-16.04/control
@@ -10,8 +10,8 @@ Package: unde
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-         libsdl2-dev (>= 2.0.4),
-         libsdl2-ttf-dev (>= 2.0.14),
+         libsdl2-2.0-0 (>= 2.0.4),
+         libsdl2-ttf-2.0-0 (>= 2.0.14),
          libsdl2-image-2.0-0 (>= 2.0.1),
          rsync (>= 3.1.1),
          util-linux (>= 2.27.1),
