32-bit patches for gdc

--- a/debian-9.x_ubuntu-16.04/control
+++ b/debian-9.x_ubuntu-16.04/control
@@ -2,7 +2,7 @@ Source: unde
 Maintainer: Nikolay (unDEFER) Krivchenkov <undefer@gmail.com>
 Section: x11
 Priority: optional
-#Build-Depends: dub (>= 0.9.24)
+Build-Depends: libdb5.3-dev (>= 5.3.28)
 Standards-Version: 3.9.2
 Homepage: http://unde.su
 
